--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,11 +9,11 @@ spring:
     #监控统计拦截的filters
     filter: stat
     #mysql驱动
-    driver-class-name: com.mysql.jdbc.Driver
+    driver:  com.mysql.cj.jdbc.Driver
     #基本属性
-    url: jdbc:mysql://127.0.0.1:3306/ymkj_app?useUnicode=true&characterEncoding=utf-8&useSSL=false
+    url: jdbc:mysql://127.0.0.1:3306/ymkj_app?characterEncoding=utf8&useSSL=false&serverTimezone=UTC&rewriteBatchedStatements=true
     username: root
-    password:
+    password: szhzs918918
     #配置初始化大小/最小/最大
     initial-size: 5
     min-idle: 5
@@ -22,6 +22,7 @@ spring:
     max-wait: 60000
     #间隔多久进行一次检测，检测需要关闭的空闲连接
     time-between-eviction-runs-millis: 60000
+
 
   #devtools插件
   devtools:
