--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,11 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.18.6</version>
@@ -80,7 +85,6 @@
             <artifactId>java-jwt</artifactId>
             <version>3.7.0</version>
         </dependency>
-
 
     </dependencies>
 
